<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.article.ui.home.HomeFragment"
        android:label="@string/tab_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.example.article.ui.discover.DiscoverFragment"
        android:label="@string/tab_discover"
        tools:layout="@layout/fragment_discover">
        <action
            android:id="@+id/action_discover_to_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.article.ui.saved.SavedFragment"
        android:label="@string/tab_saved"
        tools:layout="@layout/fragment_saved">
        <action
            android:id="@+id/action_saved_to_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.article.ui.notifications.NotificationsFragment"
        android:label="@string/tab_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.article.ui.profile.ProfileFragment"
        android:label="@string/tab_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.article.ui.detail.DetailFragment"
        android:label="@string/article_detail"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="url"
            app:argType="string"
            app:nullable="false" />
    </fragment>
</navigation> 